added custom inclusion tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load show_note %}
 <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
 <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
 <div class="span8 offset2">
@@ -5,8 +6,7 @@
     <div id="content">
         {% for note in notes %}
 			<div name="note_{{note.id}}" class="page-header">
-				title={{note.title}}
-				text={{note.text}}
+				{% show_note note %}
 			</div>
 		{% endfor %}
     </div>
