struggles... but I was able to render quasi-custom widget. Looking for errors im previous mindset

--- a/templates/count.html
+++ b/templates/count.html
@@ -4,7 +4,7 @@
 {% for form in forms %}
     <form>
         {{form.media}}
-        {{ form.as_ul}}
+        {{ form.as_p}}
     </form>
 {% endfor %}
 
