--- a/templates/add_note.html
+++ b/templates/add_note.html
@@ -1,8 +1,9 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+{% extends "base.html" %}
 
-<form action="/add_note/" method="post">{% csrf_token %}
-    {{form.media}}
-	{{ form.as_ul }}
-	<input type="submit" value="Submit" name="Submit" />
-
-</form>
+{% block content%}
+    <form action="/add_note/" method="post">{% csrf_token %}
+        {{form.media}}
+    	{{ form.as_ul }}
+    	<input type="submit" value="Submit" name="Submit" />
+    </form>
+{% endblock %}
