--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% block header %}
+    <script src="{{STATIC_URL}}jquery.js"></script>
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
 {% endblock %}
@@ -7,5 +8,7 @@
 {% endblock %}
 
 {% block footer %}
-    notes number={{NOTES_NUMBER}}
+    <div>
+        notes number={{NOTES_NUMBER}}
+    </div>
 {% endblock %}
