--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
 {% endblock %}
 
+<body>
+
 {% block content %}
 {% endblock %}
 
@@ -12,3 +14,5 @@
         notes number={{NOTES_NUMBER}}
     </div>
 {% endblock %}
+
+</body>
