--- a/templates/add_note.html
+++ b/templates/add_note.html
@@ -4,7 +4,7 @@
 <script src="{{STATIC_URL}}adding.js"></script>
 
 
-    <form action="/add_note/" method="post" id="contactform">
+    <form action="/add_note/" method="post" id="contactform" enctype="multipart/form-data">
         <div id="ajaxwrapper">
             {% csrf_token %}
             {{form.media}}
