--- a/templates/show_note.html
+++ b/templates/show_note.html
@@ -1,6 +1,4 @@
 
 title={{ title }}
 text={{ text }}
-{{image}}
-<img src="{{STATIC_URL}}images/">
-<img src="{{STATIC_URL}}{{image}}">
+<img src="{{STATIC_URL}}media/{{image}}">
