image upload done

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% block header %}
     <script src="{{STATIC_URL}}jquery.js"></script>
+    <script src="{{STATIC_URL}}jquery.form.js"></script>
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
     <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
 {% endblock %}
