done, but embed_widget.js is to be edited in case of runserver\selenium test\production clients

--- a/templates/show_note.html
+++ b/templates/show_note.html
@@ -1,4 +1,6 @@
 
 title={{ title }}
 text={{ text }}
-<img src="{{STATIC_URL}}media/{{image}}">
+{%if image %}
+    <img src="{{STATIC_URL}}media/{{image}}">
+{%endif%}
