--- a/templates/ajax_fail.html
+++ b/templates/ajax_fail.html
@@ -1,4 +1,15 @@
 some error happened
 {% csrf_token %}
 {{form.media}}
-{{ form.as_p }}
+<!--{{ form.as_p }}-->
+{%for field in form%}
+<div class="control-group {%if field.errors%} error {%endif%}">
+    <label class="control-label" for="{{field.id}}">{{field.label}}</label>
+    <div class="controls">
+        {{field}}
+        <span class="help-inline">{{field.errors}}</span>
+    </div>
+</div>
+{%endfor%}
+
+
