switched NOTES_NUMBER to lowercase

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 {% block footer %}
     <div>
-        notes number={{NOTES_NUMBER}}
+        notes number={{notes_number}}
     </div>
 {% endblock %}
 
