embed code @index page

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% block header %}
     <script src="{{STATIC_URL}}jquery.js"></script>
     <script src="{{STATIC_URL}}jquery.form.js"></script>
@@ -11,9 +12,7 @@
 {% endblock %}
 
 {% block footer %}
-    <div>
-        notes number={{notes_number}}
-    </div>
+            notes number={{notes_number}}
 {% endblock %}
 
 </body>
