--- a/templates/emb_widg.html
+++ b/templates/emb_widg.html
@@ -1,3 +1,4 @@
-
+<script src="{{STATIC_URL}}jquery.js"></script>
 <script src="http://127.0.0.1:8000{{STATIC_URL}}embed_widget.js"></script>
-<div id="container"></div>
+<div id="container">
+</div>
