minor layout improvements

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,15 @@
 {% endblock %}
 
 {% block footer %}
-            notes number={{notes_number}}
+<div class="row">
+    <div class="span8 offset1">
+        <footer class="footer" style="background-color:#c2c2c2">
+            <ul class="footer">
+                <li>notes number={{notes_number}}</li>
+            </ul>
+        </footer>
+    </div>
+</div>
 {% endblock %}
 
 </body>
