--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 {% block header %}
     <script src="{{STATIC_URL}}jquery.js"></script>
+    <script src="{{STATIC_URL}}jquery.init.js"></script>
     <script src="{{STATIC_URL}}jquery.form.js"></script>
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
-    <script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="{{STATIC_URL}}bootstrap.css">
+    <script src="{{STATIC_URL}}bootstrap.js"></script>
 {% endblock %}
 
 <body>
