--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,11 @@
 
 
         <div class=row>
-            <div class="span4 offset4">
+            <div class="span4 offset2">
                 You can insert this to your page and obtain a random note:
                     <div>
                     <pre>
-{% filter force_escape %}<script src="http://127.0.0.1:8000{{STATIC_URL}}embed_widget.js"</script>
+{% filter force_escape %}<script src="http://{{site}}{{STATIC_URL}}embed_widget.js"</script>
 <div id="container"></div>{% endfilter %}</pre>
                     </div>
                     Please, ensure you've got jQuery there!
