--- a/templates/show_note.html
+++ b/templates/show_note.html
@@ -2,5 +2,5 @@
 title={{ title }}
 text={{ text }}
 {%if image %}
-    <img src="{{STATIC_URL}}media/{{image}}">
+    <img src="{{ MEDIA_URL }}{{image}}">
 {%endif%}
