--- a/templates/show_note.html
+++ b/templates/show_note.html
@@ -1,6 +1,7 @@
+{% load static %}
 
 title={{ title }}
 text={{ text }}
 {%if image %}
-    <img src="{{ MEDIA_URL }}{{image}}">
+    <img src="{%get_media_prefix%}{{image}}">
 {%endif%}
