--- a/templates/show_note.html
+++ b/templates/show_note.html
@@ -3,5 +3,5 @@
 title={{ title }}
 text={{ text }}
 {%if image %}
-    <img src="{%get_media_prefix%}{{image}}">
+    <img src="http://{{site}}{%get_media_prefix%}{{image}}">
 {%endif%}
